--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "react-scripts build",
     "cy:run": "cypress run",
     "test": "start-server-and-test start http://localhost:3000 cy:run",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress": "./node_modules/.bin/cypress open"
   },
   "eslintConfig": {
     "extends": [
