--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ branches:
   - feature/travis-ci
 deploy:
   provider: heroku
-  api_key:
-    secure: 39757b76-cb08-4775-ab93-61c41dd4e9ad
+  api_key: 39757b76-cb08-4775-ab93-61c41dd4e9ad
   app: gifty-capstone
   skip_cleanup: true
   on:
